OSK isn't activated without physical keyboard
Affected version
Fedora 32
GNOME 3.36.0
Bug summary
Possibly related to #2353. On 3.34 OSK was activated in text fields with the absence of a physical keyboard regardless of the state of "Screen Keyboard" in Universal Access. This isn't the case. Instead the keyboard needs to be activated in Universal Access and then it shows up regardless of the presence of a physical keyboard.
Steps to reproduce
- Remove keyboard
- Tap inside text field
- Observe lack of OSK
- Activate screen keyboard in universal access (OSK now pops up in text fields)
- Connect physical keyboard (OSK shows up still even with physical keyboard)
What happened
OSK isn't activated without physical keyboard.
What did you expect to happen
This isn't so much of a problem of OSK popping up with screen keyboard enabled. Rather, OSK should be activated as it does with screen keyboard activated and be activated when a physical keyboard is not detected without screen keyboard being activated. Without screen keyboard activated, OSK should only pop up without a physical keyboard detected.